welcome.lessons.welcome.array.array123.Array123.scala.error
array123:4: error: value && is not a member of Int
		if (nums(i)=1 && nums(i+1)=2 && nums(i+2)=3) {
                              ^